# perses

./: CMakeLists.txt  Makefile  NVMLWatcher.cpp  NVMLWatcher.hpp  README.md  build.sh  driver.cpp
cmake/: FindNVML.cmake  FindPersesBoost.cmake
scripts/: build_deception.sh  deception.sh
src/: CMakeLists.txt  driver.cpp
src/lib/: CMakeLists.txt
